[package]
name = "reflect_to"
version = "0.1.1"
edition = "2021"
authors = ["nobane"]
description = "Run-time type reflection primitives"
license = "MIT"

[lib]
path = "src/lib.rs"

[features]
default = ["typescript", "python"]
typescript = ["to_typescript"]
python = ["to_python"]

[dependencies]
__internals = { path = "crates/internals" }
__macro = { path = "crates/macro" }

to_python = { path = "crates/to_python", optional = true}
to_typescript = { path = "crates/to_typescript", optional = true}

serde = { workspace = true }

[workspace.dependencies]
once_cell = "1.19"
proc-macro2 = "1.0"
quote = "1.0"
regex = "1.10"
serde = { version = "1.0.219", features = ["derive"] }
syn = { version = "2.0", features = ["full", "parsing", "extra-traits"] }
thiserror = "1.0"


[workspace]
members = [
    "crates/internals",
    "crates/macro",
    "crates/to_python",
    "crates/to_typescript",
]
