### `reflect_to` crate ###
[package]
name = "reflect_to"
version = "0.1.2"
edition = "2021"
authors = ["nobane"]
description = "Run-time type reflection primitives"
license = "MIT"

[features]
default = ["typescript", "python"]
typescript = ["to_typescript"]
python = ["to_python"]

[dependencies]
__internals = { workspace = true }
__macro = { workspace = true }

to_python = { workspace = true, optional = true }
to_typescript = { workspace = true, optional = true }

[dev-dependencies]
serde = { workspace = true }

### cargo workspace ###
[workspace.dependencies]
__internals = { path = "crates/internals", version = "0.1.2" }
__macro = { path = "crates/macro" , version = "0.1.2"}

to_python = { path = "crates/to_python", version = "0.1.2" }
to_typescript = { path = "crates/to_typescript", version = "0.1.2" }

once_cell = "1.19"
proc-macro2 = "1.0"
quote = "1.0"
regex = "1.10"
serde = { version = "1.0.219", features = ["derive"] }
syn = { version = "2.0", features = ["full", "parsing", "extra-traits"] }
thiserror = "1.0"


[workspace]
members = [
    "crates/internals",
    "crates/macro",
    "crates/to_python",
    "crates/to_typescript",
]
