[package]
name = "reflect_to"
version = "0.1.3"
edition = "2021"
authors = ["nobane"]
description = "Run-time type reflection and conversion"
license = "MIT"

[features]
default = ["typescript", "python"]
typescript = []
python = []

[dependencies]
reflect_macro = { path = "./reflect_macro", version = "0.1.2" }

thiserror = "1.0"
once_cell = "1.19"
regex = "1.10"

[dev-dependencies]
serde = { version = "1.0.219", features = ["derive"] }
