[package]
name = "__macro"
version = "0.1.2"
edition = "2021"
authors = ["nobane"]
description = "Derive macro for the reflect_to framework"
license = "MIT"
publish = false

[lib]
proc-macro = true

[dependencies]
__internals = { path = "../internals", version = "0.1.2" }

syn = { workspace = true }
quote = { workspace = true }
proc-macro2 = { workspace = true }
