[package]
name = "reflect_macro"
version = "0.1.6"
edition = "2021"
authors = ["nobane"]
description = "Reflect derive macro for `reflect_to`"
license = "MIT"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full", "parsing", "extra-traits"] }