[package]
name = "reflect_to"
version = "0.1.0"
edition = "2021"
authors = ["nobane"]
description = "Core runtime components for reflect_to"
license = "MIT"

[dependencies]
reflect_to_core= { path = "../reflect_to_core" }
reflect_to_macro = { path = "../reflect_to_macro" }
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"
regex = "1.10"
once_cell = "1.19"