[package]
name = "reflect_to"
version = "0.1.6"
edition = "2021"
authors = ["nobane"]
description = "Run-time type reflection and conversion"
license = "MIT"
readme = "../../README.md"

[features]
default = ["to_typescript", "to_python"]
to_typescript = []
to_python = []

[dependencies]
reflect_macro = { path = "../reflect_macro", version = "0.1.6" }

thiserror = "1.0"
once_cell = "1.19"
regex = "1.10"

[dev-dependencies]
serde = { version = "1.0.219", features = ["derive"] }
