[package]
name = "reflect_to_macro"
version = "0.1.0"
edition = "2021"
authors = ["nobane"]
description = "Derive macro for the reflect_to framework"
license = "MIT"

[lib]
proc-macro = true

[dependencies]
syn = { workspace = true }
quote = { workspace = true }
proc-macro2 = { workspace = true }

reflect_to_core = { path = "../reflect_to_core" }